--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,4 @@
-edition = "2018"
-format_code_in_doc_comments = true
-imports_granularity = "Crate"
+edition = "2021"
+max_width = 80
+#format_code_in_doc_comments = true
+#imports_granularity = "Crate"
